feat: configuration of route as a parameter
  - reading time is increased due to API response delay