@@ -409,7 +409,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       ApiConnectionsResponse result =
-          transportClient.getConnections(FROM, TO, null, null, List.of());
+          transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       assertThat(result).isNotNull();
       assertThat(result.connections()).hasSize(1);
@@ -421,7 +421,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       ApiConnectionsResponse result =
-          transportClient.getConnections(FROM, TO, null, null, List.of());
+          transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       assertThat(result.from()).isNotNull();
       assertThat(result.from().id()).isEqualTo("8503000");
@@ -434,7 +434,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       ApiConnectionsResponse result =
-          transportClient.getConnections(FROM, TO, null, null, List.of());
+          transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       assertThat(result.to()).isNotNull();
       assertThat(result.to().id()).isEqualTo("8507000");
@@ -447,7 +447,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       ApiConnectionsResponse result =
-          transportClient.getConnections(FROM, TO, null, null, List.of());
+          transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       ApiConnection connection = result.connections().getFirst();
       assertThat(connection.duration()).isEqualTo("00d00:57:00");
@@ -460,7 +460,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       ApiConnectionsResponse result =
-          transportClient.getConnections(FROM, TO, null, null, List.of());
+          transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       assertThat(result.connections().getFirst().sections()).hasSize(1);
     }
@@ -470,7 +470,7 @@ class TransportClientImplTest {
     void shouldSendFromAndToAsQueryParams() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, List.of());
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).contains("from=" + FROM).contains("to=" + TO);
@@ -481,7 +481,7 @@ class TransportClientImplTest {
     void shouldSendGetRequestToConnectionsPath() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, List.of());
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getMethod()).isEqualTo("GET");
@@ -493,7 +493,7 @@ class TransportClientImplTest {
     void shouldIncludeDateParamWhenProvided() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, LocalDate.of(2024, 10, 10), null, List.of());
+      transportClient.getConnections(FROM, TO, LocalDate.of(2024, 10, 10), null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).contains("date=2024-10-10");
@@ -504,7 +504,7 @@ class TransportClientImplTest {
     void shouldNotIncludeDateParamWhenNull() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, List.of());
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).doesNotContain("date=");
@@ -515,7 +515,7 @@ class TransportClientImplTest {
     void shouldIncludeTimeParamWhenProvided() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, LocalTime.of(8, 0), List.of());
+      transportClient.getConnections(FROM, TO, null, LocalTime.of(8, 0), List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).contains("time=08:00");
@@ -526,7 +526,7 @@ class TransportClientImplTest {
     void shouldNotIncludeTimeParamWhenNull() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, List.of());
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).doesNotContain("time=");
@@ -538,7 +538,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       transportClient.getConnections(
-          FROM, TO, null, null, List.of(TransportType.TRAIN, TransportType.BUS));
+          FROM, TO, null, null, List.of(TransportType.TRAIN, TransportType.BUS), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       String path = recorded.getPath();
@@ -550,7 +550,7 @@ class TransportClientImplTest {
     void shouldNotIncludeTransportationsWhenListIsEmpty() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, List.of());
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).doesNotContain("transportations");
@@ -561,7 +561,7 @@ class TransportClientImplTest {
     void shouldNotIncludeTransportationsWhenListIsNull() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, null);
+      transportClient.getConnections(FROM, TO, null, null, null, null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).doesNotContain("transportations");
@@ -604,7 +604,7 @@ class TransportClientImplTest {
 
       ApiStationBoardResponse result = transportClient.getStationBoard(STATION, ID, LIMIT, TYPES);
 
-      ApiJourney journey = result.stationBoard().get(0);
+      ApiJourney journey = result.stationBoard().getFirst();
       assertThat(journey.name()).isEqualTo("IC 1");
       assertThat(journey.category()).isEqualTo("IC");
       assertThat(journey.operator()).isEqualTo("SBB");
